# donut

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.out  art  ascii_art.cpp  ascii_art.h  core.h  donut.cpp  main.cpp  shapes.h  test.cpp  xmake.lua
.cache/clangd/index/: core.cpp.BD9DDBCAAB67BDDE.idx  core.hpp.0758D47544F7B079.idx  geometry.cpp.F9E87A02889B2230.idx  geometry.hpp.A32B2A550425AD76.idx  main.cpp.26A811EF46D70BF9.idx  old.cpp.F5696BFC91A1D27D.idx  shapes.cpp.D855B6B650DD849E.idx  shapes.hpp.05F90CA20ACB4147.idx  test.cpp.A36151E73790DE1B.idx  utils.cpp.6CE5514078F81D4A.idx  utils.hpp.E8D822A2C3EBC310.idx
binaries/: main.cpp  test_CLI.cpp
cli/: main.cpp  test.cpp
config/: default.toml
include/: core.hpp  geometry.hpp  interactive.hpp  io.hpp  shapes.hpp  utils.hpp
include/donut/: config.hpp  control.hpp  core.hpp  donut.hpp  geometry.hpp  input.hpp  interactive.hpp  io.hpp  parameter.hpp  session.hpp  shapes.hpp  stats.hpp  types.hpp  utils.hpp
old/: core.h  donut.cpp  main.cpp  test2.cpp
src/: config.cpp  control.cpp  core.cpp  geometry.cpp  input.cpp  interactive.cpp  io.cpp  main.cpp  old.cpp  parameter.cpp  session.cpp  shapes.cpp  stats.cpp  utils.cpp
